# rumba

./: .dockerignore  .gitignore  .lefthook.yml  .settings.dev.toml  .settings.local.toml  .settings.test.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  diesel.toml
.github/: CODEOWNERS  dependabot.yml  release-please-config.json  release-please-manifest.json
.github/workflows/: _build.yml  _deploy.yml  auto-merge.yml  build-and-test.yml  build.yml  codeql.yml  docker-build.yml  docker-stage.yml  idle.yml  pr-needs-rebase.yml  prod-build.yml  prod-deploy.yml  release-please.yml  stage-build.yml  stage-deploy.yml  test.yml  welcome-bot.yml
ai-test/: Cargo.toml  README.md
ai-test/data/: prompts.yaml
ai-test/src/: ai_help.rs  ask.rs  main.rs  prompts.rs
k8s/: Chart.yaml  values.yaml
k8s/templates/: deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
k8s/values/: dev.yaml  prod.yaml  stage.yaml
migrations/2022-04-25-134722_create_users/: down.sql  up.sql
migrations/2022-05-06-153901_create_collections_documents/: down.sql  up.sql
migrations/2022-05-21-100722_notifications/: down.sql  up.sql
migrations/2022-06-01-131531_settings/: down.sql  up.sql
migrations/2022-06-08-113837_webhooks/: down.sql  up.sql
migrations/2022-07-19-114928_cascade/: down.sql  up.sql
migrations/2022-07-25-101609_multiple_collections/: down.sql  up.sql
migrations/2022-08-11-090453_preview-setting-multiple-collections/: down.sql  up.sql
migrations/2022-08-18-102721_fix-sync-triggers/: down.sql  up.sql
migrations/2022-08-18-115412_add-collections-last-modified-to-settings/: down.sql  up.sql
migrations/2022-11-22-153612_add-bcd-updates-table/: down.sql  up.sql
migrations/2023-01-03-084740_remove-collections-v1/: down.sql  up.sql
migrations/2023-01-04-153534_add_idx_for_url/: down.sql  up.sql
migrations/2023-01-04-153534_migrate-watched-to-collection/: down.sql  up.sql
migrations/2023-01-06-110440_create_activity_ping/: down.sql  up.sql
migrations/2023-01-09-103911_migrate-watched-to-collection/: down.sql  up.sql
migrations/2023-01-10-103955_newsletter/: down.sql  up.sql
migrations/2023-01-16-125746_engines-in-bcd-updates/: up.sql
migrations/2023-01-17-155729_ping-cascade/: down.sql  up.sql
migrations/2023-01-17-174701_engines-and-view/: down.sql
migrations/2023-01-30-103345_no-ads-settings/: down.sql  up.sql
migrations/2023-03-24-123735_remove-watched/: down.sql  up.sql
migrations/2023-06-02-151013_playground-share/: down.sql  up.sql
migrations/2023-06-13-081720_ai-help-limits/: down.sql  up.sql
migrations/2023-06-21-200806_ai-explain-cache/: down.sql  up.sql
migrations/2023-07-24-120659_experiments/: down.sql  up.sql
migrations/2023-10-12-145316_history/: down.sql  up.sql
migrations/2023-10-30-132140_history_setting/: down.sql  up.sql
migrations/2024-02-14-165616_user_subscription_transitions/: down.sql  up.sql
migrations/2024-02-20-093804_ai_help_metadata/: down.sql  up.sql
migrations/2024-02-21-180000_browsers_without_release_date/: down.sql  up.sql
migrations/2024-03-29-101252_add_ai_help_metadata_embedding_duration/: down.sql  up.sql
src/: error.rs  experiments.rs  gemini.rs  helpers.rs  ids.rs  lib.rs  logging.rs  main.rs  metrics.rs  session_migration_middleware.rs  settings.rs  tags.rs
src/ai/: ask.rs  constants.rs  embeddings.rs  error.rs  explain.rs  help.rs  helpers.rs  mod.rs
src/api/: admin.rs  ai.rs  ai_explain.rs  ai_help.rs  api_v1.rs  auth.rs  chat.rs  collections.rs  common.rs  elastic.rs  error.rs  experiments.rs  fxa_webhook.rs  healthz.rs  info.rs  mod.rs  newsletter.rs  notifications.rs  ping.rs  play.rs  root.rs  search.rs  session_migration_middleware.rs  settings.rs  updates.rs  user_middleware.rs  watched_items.rs  whoami.rs
src/api/v2/: api_v2.rs  collection_items.rs  mod.rs  multiple_collections.rs  updates.rs
src/db/: ai.rs  ai_explain.rs  ai_help.rs  ai_history.rs  collections.rs  documents.rs  error.rs  experiments.rs  fxa_webhook.rs  mod.rs  model.rs  notifications.rs  ping.rs  play.rs  schema.rs  schema_manual.rs  settings.rs  supabase.rs  types.rs  users.rs  watched_items.rs
src/db/v2/: ai_history.rs  bcd_updates.rs  collection_items.rs  db_macros.rs  mod.rs  model.rs  multiple_collections.rs  pagination.rs  synchronize_bcd_updates_db.rs
src/fxa/: error.rs  mod.rs  types.rs
src/util/: countries.rs  mod.rs
tests/: README.md  all.rs
tests/api/: ai_explain.rs  ai_help.rs  ai_help_history.rs  auth.rs  collections.rs  experiments.rs  fxa_webhooks.rs  healthz.rs  mod.rs  multiple_collections.rs  newsletter.rs  notification_processing.rs  notifications.rs  ping.rs  play.rs  root.rs  search.rs  settings.rs  updates.rs  watched_items.rs  whoami.rs
tests/data/: rumba-test-invalid.pem  rumba-test.pem  updates_response_collections.json
tests/data/set_tokens/: README.md  set_token_delete_user.json  set_token_delete_user.txt  set_token_profile_change.json  set_token_subscription_state_change_to_10m.json  set_token_subscription_state_change_to_10m.txt  set_token_subscription_state_change_to_5m.json  set_token_subscription_state_change_to_5m.txt  set_token_subscription_state_change_to_core.json  set_token_subscription_state_change_to_core_inactive.json  set_token_subscription_state_change_to_core_inactive.txt
tests/fxa/: callback.rs
tests/helpers/: api_assertions.rs  app.rs  db.rs  http_client.rs  identity.rs  mod.rs  session.rs  set_tokens.rs
tests/stubs/: authorization.json  basket_lookup_user_not_found.json  basket_subscribe.json  discover.json  health.json  jwks.json  load_gist.json  load_gist_wrong_owner.json  save_gist.json  token.json  userinfo.json
tests/test_specific_stubs/bcd_updates/: bcd_updates.json  capture_controller.json  empty_metadata.json
tests/test_specific_stubs/collections/: css_document_200.json
tests/test_specific_stubs/collections_core_user/: userinfo_core_user.json
tests/test_specific_stubs/core_user/: userinfo.json
tests/test_specific_stubs/fxa_webhooks/: userinfo_core_subscription.json  (+1 more)
(+37 files in other folders)
