[package]
name = "rumba"
version = "1.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rumba"
path = "src/main.rs"

[dependencies]
thiserror = "1"
anyhow = "1"

actix-web = "4"
actix-http = "3"
actix-rt = "2"
actix-identity = "0.5"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web-httpauth = "0.8"

diesel = { version = "2", features = ["postgres", "uuid", "r2d2", "chrono", "serde_json"] }
diesel_migrations = "2"
diesel-derive-enum = { version = "2", features = ["postgres"] }

elasticsearch = "7.14.0-alpha.1"
harsh = "0.2"
itertools = "0.10.5"
r2d2 = "0.8"

openidconnect = "3"
jsonwebtoken = "8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["base64"]}
serde_urlencoded = "0.7"
form_urlencoded = "1"
serde_path_to_error = "0.1"
percent-encoding = "2"

config = "0.13"
hostname = "0.3"
slog = { version = "2", features = ["max_level_info", "release_max_level_info", "dynamic-keys"] }
slog-async = "2"
slog-envlogger = "2"
slog-mozlog-json = "0.1"
slog-scope = "4"
slog-stdlog = "4"
slog-term = "2"

uuid = { version = "1", features = ["serde", "v4", "fast-rng"] }
validator = { version = "0.16", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4"
url = "2"
base64 = "0.21"
futures-util = "0.3"
regex = "1"

const_format = "0.2"
once_cell = "1"

cadence = "0.29"
woothee = "0.13"
sentry = "0.31"
sentry-actix = "0.31"

basket = "0.0.5"

octocrab = "0.25"
aes-gcm = { version = "0.10", features = ["default", "std"] }

[dev-dependencies]
stubr = "0.6"
stubr-attributes = "0.6"
assert-json-diff = "2"
