[package]
name = "rumba"
version = "1.12.2"
edition = "2021"
rust-version = "1.81"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rumba"
path = "src/main.rs"

[workspace]
members = ["ai-test"]
resolver = "2"

[dependencies]
thiserror = "1"
anyhow = "1"

actix-web = "4"
actix-http = "3"
actix-rt = "2"
actix-identity = "0.8"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-web-httpauth = "0.8"
actix-web-lab = "0.22"

diesel = { version = "2", features = [
    "postgres",
    "uuid",
    "r2d2",
    "chrono",
    "serde_json",
] }
diesel_migrations = "2"
diesel-derive-enum = { version = "2", features = ["postgres"] }
pgvector = { version = "0.3", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7", features = ["macros", "runtime-tokio-rustls", "postgres"], default-features = false }

elasticsearch = "7.17.7-alpha.1"
harsh = "0.2"
itertools = "0.13"
r2d2 = "0.8"

openidconnect = "3"
jsonwebtoken = "9"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["base64"] }
serde_urlencoded = "0.7"
form_urlencoded = "1"
serde_path_to_error = "0.1"
percent-encoding = "2"

config = "0.14"
hostname = "0.4"
slog = { version = "2", features = [
    "max_level_trace",
    "release_max_level_info",
    "dynamic-keys",
] }
slog-async = "2"
slog-envlogger = "2"
slog-mozlog-json = "0.1"
slog-scope = "4"
slog-stdlog = "4"
slog-term = "2"

uuid = { version = "1", features = ["serde", "v4", "fast-rng"] }
validator = { version = "0.18", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4"
url = "2"
base64 = "0.22"
futures = "0.3"
futures-util = "0.3"
regex = "1"

const_format = "0.2"
once_cell = "1"

cadence = "1"
woothee = "0.13"
sentry = "0.34"
sentry-actix = "0.34"

basket = "0.0.5"
async-openai = "0.14"
tiktoken-rs = { version = "0.5", features = ["async-openai"] }

octocrab = "0.41"
aes-gcm = { version = "0.10", features = ["default", "std"] }
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
stubr = "0.6"
stubr-attributes = "0.6"
assert-json-diff = "2"
